--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
               with:
                 python-version: ${{env.python_version}}   # or $python_version
             - name: unit test
-              run: pytest
+              run: pytest test.py
             - name: Configure AWS credentials using OIDC
               uses: aws-actions/configure-aws-credentials@v2
               with:
