--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: ${{ env.python_version }}
 
       - name: Install dependencies
-        run: pip install flask pytest    
+        run: pip install -r requirements.txt   
 
       - name: Install pytest
         run: pip install pytest
