--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,7 +15,7 @@ env:
   IMAGE_NAME: portfolio
   AWS_REGION: us-east-1
   ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
-  ECR_REPO: $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME
+  ECR_REPO: ${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/dev
 
 jobs:
   build:
@@ -43,5 +43,31 @@ jobs:
           role-to-assume: ${{ secrets.ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Check credentials
-        run: aws s3 ls
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      # 4. Build Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }} .
+
+      # 5. Tag Docker image for ECR
+      - name: Tag Docker image
+        run: |
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.ECR_REPO }}:latest
+        
+
+      # 6. Scan Docker image with Trivy
+      - name: Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.ECR_REPO }}:latest
+          format: table
+          exit-code: '1' # fail workflow on critical/high vulnerabilities
+          severity: CRITICAL,HIGH
+
+      # 7. Push Docker image to ECR
+      - name: Push Docker image to Amazon ECR
+        run: |
+          docker push ${{ env.ECR_REPO }}:latest 
