--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,9 +29,10 @@ jobs:
           python-version: ${{ env.python_version }}
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install pytest
+        run: pip install -r requirements.txt   
+
+      - name: Install pytest
+        run: pip install pytest
 
       - name: Unit test
         run: pytest test.py
@@ -46,22 +47,27 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      # 4. Build Docker image
       - name: Build Docker image
         run: |
           docker build -t ${{ env.IMAGE_NAME }} .
 
+      # 5. Tag Docker image for ECR
       - name: Tag Docker image
         run: |
           docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.ECR_REPO }}:latest
+        
 
+      # 6. Scan Docker image with Trivy
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.ECR_REPO }}:latest
           format: table
-          exit-code: '1'
-          severity: CRITICAL,HIGH
+          exit-code: '1' # fail workflow on critical/high vulnerabilities
+          severity: CRITICAL
 
+      # 7. Push Docker image to ECR
       - name: Push Docker image to Amazon ECR
         run: |
           docker push ${{ env.ECR_REPO }}:latest
