--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,5 +1,4 @@
 name: Utc App ci/cd
-
 on:
   push:
     branches: [ "main" ]
@@ -7,11 +6,11 @@ on:
     branches: [ "main" ]
 
 permissions:
-  id-token: write
-  contents: read
+      id-token: write
+      contents: read
 
 env:
-  python_version: "3.11"
+  python_version: 3.11
   IMAGE_NAME: portfolio
   AWS_REGION: us-east-1
   ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
@@ -22,52 +21,40 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: ${{ env.python_version }}
+            python-version: ${{env.python_version}}
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt   
-
+        # or $python_version
       - name: Install pytest
-        run: pip install pytest
-
-      - name: Unit test
+        run: pip install -r requirements.txt
+      - name: unit test
         run: pytest test.py
-
+        
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # 4. Build Docker image
       - name: Build Docker image
         run: |
           docker build -t ${{ env.IMAGE_NAME }} .
-
-      # 5. Tag Docker image for ECR
-      - name: Tag Docker image
+      - name: Tag Docker image    
         run: |
           docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.ECR_REPO }}:latest
-        
-
-      # 6. Scan Docker image with Trivy
+         
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.ECR_REPO }}:latest
           format: table
-          exit-code: '1' # Not to fail workflow on critical/high vulnerabilities
-          severity: CRITICAL, HIGH
+          exit-code: '1' 
+          severity: CRITICAL,HIGH
 
-      # 7. Push Docker image to ECR
       - name: Push Docker image to Amazon ECR
         run: |
           docker push ${{ env.ECR_REPO }}:latest
