--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,7 @@ env:
   AWS_REGION: us-east-1
   ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
   ECR_REPO: ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/dev
+  IMAGE_TAG:  ${{ github.sha }}
 
 jobs:
   build:
@@ -45,16 +46,35 @@ jobs:
           docker build -t ${{ env.IMAGE_NAME }} .
       - name: Tag Docker image    
         run: |
-          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.ECR_REPO }}:latest
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
          
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.ECR_REPO }}:latest
+          image-ref: ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
           format: table
           exit-code: '1' 
           severity: CRITICAL,HIGH
 
       - name: Push Docker image to Amazon ECR
         run: |
-          docker push ${{ env.ECR_REPO }}:latest
+          docker push ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
+
+  ECS_deploy:
+      needs: build
+      runs-on: ubuntu-latest 
+      steps:
+        - name: Render ECS task definition with new image
+          id: taskdef
+          uses: aws-actions/amazon-ecs-render-task-definition@v1
+          with:
+            task-definition: ecs-taskdef.json
+            container-name: app
+            image: ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
+        - name: Deploy to ECS Service
+          uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+          with:
+            task-definition: ${{ steps.taskdef.outputs.task-definition }}
+            cluster: nginx-fargate-cluster
+            service: nginx-fargate-service
+            wait-for-service-stability: true
