--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -64,6 +64,7 @@ jobs:
       needs: build
       runs-on: ubuntu-latest 
       steps:
+        - uses: actions/checkout@v4
         - name: Render ECS task definition with new image
           id: taskdef
           uses: aws-actions/amazon-ecs-render-task-definition@v1
