--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,7 +70,7 @@ jobs:
           uses: aws-actions/amazon-ecs-render-task-definition@v1
           with:
             task-definition: ecs-taskdef.json
-            container-name: app
+            container-name: nginx
             image: ${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
         - name: Deploy to ECS Service
           uses: aws-actions/amazon-ecs-deploy-task-definition@v1
